# agent-eval-suite

./: .gitignore  README.md  harness_diagram.html  pyproject.toml
.github/workflows/: eval.yml
datasets/: generate_testset_demo.py
examples/: reference_agent.py
specs/: 00-overview.md  01-harness-interface.md
src/agent_eval_suite/: __init__.py  __main__.py
src/agent_eval_suite/harness/: __init__.py  adapter.py  config.py  models.py  runner.py  tracing.py
src/agent_eval_suite/metrics/: __init__.py  deepeval_layer.py  ragas_simple.py  trajectory.py
tests/: test_adapters.py  test_dataset.py  test_deepeval_layer.py  test_ragas_metrics.py  test_skeleton.py  test_tracing.py  test_trajectory.py
